force-app/main/default/objects/Product2/fields/crms11__Add_on_Trigger_Only__c.field-meta.xml
<CustomField>
    <fullName>crms11__Add_on_Trigger_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selection of this product will trigger add-ons and will not add this product as a line item</description>
    <inlineHelpText>Selection of this product will trigger add-ons and will not add this product as a line item</inlineHelpText>
    <label>Add-on Trigger Only</label>
    <type>Checkbox</type>
</CustomField>