force-app/main/default/objects/Product2/fields/crms11__Allowed_Quantities_X__c.field-meta.xml
<CustomField>
    <fullName>crms11__Allowed_Quantities_X__c</fullName>
    <inlineHelpText>Specify the allowed values for Quantity X</inlineHelpText>
    <label>Allowed Quantities X</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>