force-app/main/default/objects/Product2/fields/crms11__Client_Price_Only__c.field-meta.xml
<CustomField>
    <fullName>crms11__Client_Price_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Product may only appear in Flexpricer search results for the specified Accounts that have valid Contracted Prices for this Product.</description>
    <inlineHelpText>This Product may only appear in Flexpricer search results for the specified Accounts that have valid Contracted Prices for this Product.</inlineHelpText>
    <label>Contracted Prices Required</label>
    <type>Checkbox</type>
</CustomField>