force-app/main/default/objects/Product2/fields/crms11__Collapse__c.field-meta.xml
<CustomField>
    <fullName>crms11__Collapse__c</fullName>
    <label>Collapse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collapse</fullName>
            </value>
            <value>
                <fullName>Do Not Collapse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>