force-app/main/default/objects/Product2/fields/crms11__Configurator_Dynamic_Pricing__c.field-meta.xml
<CustomField>
    <fullName>crms11__Configurator_Dynamic_Pricing__c</fullName>
    <inlineHelpText>The sales price of this product is dynamically from the line items in the configurator</inlineHelpText>
    <label>Configurator Dynamic Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Multiply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>