force-app/main/default/objects/Product2/fields/crms11__Cost_Based_Pricing__c.field-meta.xml
<CustomField>
    <fullName>crms11__Cost_Based_Pricing__c</fullName>
    <inlineHelpText>Price this product based on its cost. Use Mark Up to add a % to the cost to set the sales price or Target Margin to set the default sales price based on margin.</inlineHelpText>
    <label>Cost-Based Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark Up</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>