force-app/main/default/objects/Product2/fields/crms11__Default_Quantity_Y__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Quantity_Y__c</fullName>
    <label>Default Quantity Y</label>
    <precision>17</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>