force-app/main/default/objects/Product2/fields/crms11__Default_Quantity_Z__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Quantity_Z__c</fullName>
    <label>Default Quantity Z</label>
    <precision>17</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>