force-app/main/default/objects/Product2/fields/crms11__Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Discount__c</fullName>
    <description>Placeholder field for Discount in Account Pricelist</description>
    <formula>null</formula>
    <label>Discount</label>
    <type>Text</type>
</CustomField>