force-app/main/default/objects/Product2/fields/crms11__Discount_From__c.field-meta.xml
<CustomField>
    <fullName>crms11__Discount_From__c</fullName>
    <label>Discount From</label>
    <type>Date</type>
</CustomField>