force-app/main/default/objects/Product2/fields/crms11__Exclude_from_Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>crms11__Exclude_from_Account_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Account Discount</label>
    <type>Checkbox</type>
</CustomField>