force-app/main/default/objects/Product2/fields/crms11__Exclude_from_Search_Results__c.field-meta.xml
<CustomField>
    <fullName>crms11__Exclude_from_Search_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Search Results</label>
    <type>Checkbox</type>
</CustomField>