force-app/main/default/objects/Product2/fields/crms11__Exclude_from_TDT__c.field-meta.xml
<CustomField>
    <fullName>crms11__Exclude_from_TDT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To exclude the product from Target Discounted Total calculations.</description>
    <inlineHelpText>Excludes this product from Target Discounted Total calculations.</inlineHelpText>
    <label>Exclude from TDT</label>
    <type>Checkbox</type>
</CustomField>