force-app/main/default/objects/Product2/fields/crms11__List_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__List_Price__c</fullName>
    <description>Placeholder field for List Price in Account Pricelist</description>
    <formula>null</formula>
    <label>List Price</label>
    <type>Text</type>
</CustomField>