force-app/main/default/objects/Product2/fields/crms11__Lock_Quantity_Y_to_Default__c.field-meta.xml
<CustomField>
    <fullName>crms11__Lock_Quantity_Y_to_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Quantity Y to Default</label>
    <type>Checkbox</type>
</CustomField>