force-app/main/default/objects/Product2/fields/crms11__Percentage_Product__c.field-meta.xml
<CustomField>
    <fullName>crms11__Percentage_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for percentage pricing feature.</description>
    <label>Percentage Product</label>
    <type>Checkbox</type>
</CustomField>