force-app/main/default/objects/Product2/fields/crms11__Price_Lock__c.field-meta.xml
<CustomField>
    <fullName>crms11__Price_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Lock</label>
    <type>Checkbox</type>
</CustomField>