force-app/main/default/objects/Product2/fields/crms11__Product_Image__c.field-meta.xml
<CustomField>
    <fullName>crms11__Product_Image__c</fullName>
    <description>It&apos;s a thumbnail of the Product.</description>
    <label>Product Image</label>
    <type>Url</type>
</CustomField>