force-app/main/default/objects/Product2/fields/crms11__Proration_Calculation__c.field-meta.xml
<CustomField>
    <fullName>crms11__Proration_Calculation__c</fullName>
    <label>Proration Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>crms11__Prorations</valueSetName>
    </valueSet>
</CustomField>