force-app/main/default/objects/Product2/fields/crms11__Proration_Precision__c.field-meta.xml
<CustomField>
    <fullName>crms11__Proration_Precision__c</fullName>
    <label>Proration Precision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>crms11__Precision</valueSetName>
    </valueSet>
</CustomField>