force-app/main/default/objects/Product2/fields/crms11__Quantity_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>crms11__Quantity_Multiplier__c</fullName>
    <label>Quantity Multiplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity Rates</fullName>
            </value>
            <value>
                <fullName>Quantity X</fullName>
            </value>
            <value>
                <fullName>Quantity XX</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>