force-app/main/default/objects/Product2/fields/crms11__Quantity_Y_Label__c.field-meta.xml
<CustomField>
    <fullName>crms11__Quantity_Y_Label__c</fullName>
    <label>Quantity Y Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>