force-app/main/default/objects/Product2/fields/crms11__Rapid_Quantity_Options__c.field-meta.xml
<CustomField>
    <fullName>crms11__Rapid_Quantity_Options__c</fullName>
    <inlineHelpText>Maximum four values can be selected.</inlineHelpText>
    <label>Rapid Quantity Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>