force-app/main/default/objects/Product2/fields/crms11__Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>crms11__Renewal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Renewal Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>