force-app/main/default/objects/Product2/fields/crms11__Show_Finance_Schedules__c.field-meta.xml
<CustomField>
    <fullName>crms11__Show_Finance_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Finance Schedules</label>
    <type>Checkbox</type>
</CustomField>