force-app/main/default/objects/Product2/fields/crms11__Subscription_Period__c.field-meta.xml
<CustomField>
    <fullName>crms11__Subscription_Period__c</fullName>
    <label>Subscription Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>