force-app/main/default/objects/Product2/fields/crms11__Unit_Cost_of_Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Unit_Cost_of_Discounted_Price__c</fullName>
    <label>Unit Cost of Discounted Price %</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>