force-app/main/default/objects/Product2/fields/crms11__Updated_Price__c.field-meta.xml
<CustomField>
    <fullName>crms11__Updated_Price__c</fullName>
    <description>Placeholder field for Updated Price in Account Pricelist</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Price</label>
    <type>Text</type>
</CustomField>