force-app/main/default/objects/Product2/fields/crms11__Valid_To__c.field-meta.xml
<CustomField>
    <fullName>crms11__Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>