force-app/main/default/objects/Product2/fields/crms11__Volume_Price_Option__c.field-meta.xml
<CustomField>
    <fullName>crms11__Volume_Price_Option__c</fullName>
    <description>Type of Volume Pricing to apply, default is Volume Pricing.</description>
    <inlineHelpText>Type of Volume Pricing to apply, default is Volume Pricing.</inlineHelpText>
    <label>Volume Price Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
                <default>true</default>
                <label>Volume</label>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>