force-app/main/default/objects/Product2/validationRules/crms11__CDP_and_Percentage_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>crms11__CDP_and_Percentage_Product</fullName>
    <active>true</active>
    <description>Prevent the product from being specified as a Percentage Priced Product using Configurator Dynamic Pricing.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(crms11__Configurator_Dynamic_Pricing__c))),
 crms11__Percentage_Product__c == true
)</errorConditionFormula>
    <errorMessage>You cannot enable Percentage Product if Configurator Dynamic Pricing is enabled</errorMessage>
</ValidationRule>