force-app/main/default/objects/Product2/validationRules/crms11__Percentage_Product_and_Cost_Based_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>crms11__Percentage_Product_and_Cost_Based_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( crms11__Percentage_Product__c == true,  NOT (ISBLANK( TEXT(crms11__Cost_Based_Pricing__c) ) ) )</errorConditionFormula>
    <errorMessage>Cost-Based Pricing and Percentage Pricing cannot be enabled at the same time</errorMessage>
</ValidationRule>